# sequence-embeddings

./: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: clear-birds-brush.md  embed-amplicon-sequence.md  empty-dots-rest.md  fresh-groups-tickle.md  giant-forks-divide.md  migrate-to-structurer.md  sequence-embeddings-resource-formulas.md  tidy-cups-dance.md
.github/workflows/: build.yaml  mark-stable.yaml
block/: CHANGELOG.md  package.json
block/src/: index.ts
docs/: description.md
model/: CHANGELOG.md  package.json
model/src/: compat.ts  dataModel.ts  index.ts  scopes.ts  types.ts
software/: CHANGELOG.md  package.json  pyproject.toml
software/src_python/: main.py  requirements.txt
test/: CHANGELOG.md  package.json
ui/: CHANGELOG.md  package.json
ui/src/: app.ts
ui/src/pages/: EmbeddingCard.vue  EmbeddingSelector.vue  MainPage.vue  ReportTable.vue
workflow/: CHANGELOG.md  package.json
workflow/src/: columns.lib.tengo  compute-embeddings.tpl.tengo  compute-stats.tpl.tengo  main.tpl.tengo  models.lib.tengo  prerun.tpl.tengo
