[project]
name = "sequence-embeddings-runner"
version = "0.0.0"
requires-python = ">=3.12.0, <3.13"

[dependency-groups]
dev = [
    "polars-lts-cpu==1.33.1",
    "numpy==2.2.6",
    "pyarrow==21.0.0",
    "torch==2.5.1",
    "transformers==4.46.3",
    "onnxruntime==1.20.1",
    "accelerate==1.1.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src_python"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA GPU",
]

[tool.coverage.run]
source = ["src_python"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
